# python-aws-sqs-batchlib

./: .gitignore  CHANGELOG.md  Makefile  README.md  aws_sqs_batchlib.py  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: python_ci.yaml
aws_sqs_batchlib/: __init__.py  aws_sqs_batchlib.py
benchmark/: benchmark.py  end2end.py
tests/: test_aws_sqs_batchlib.py
