[project]
name = "aws-sqs-batchlib"
version = "3.0.0"
description = "Library for working with Amazon SQS"
authors = [
    { name = "Sami Jaktholm", email = "sjakthol@outlook.com" }
]
license = "MIT"
readme = 'README.md'
requires-python = ">=3.9"
dependencies = [
  "boto3>=1.38.8,<2"
]


[dependency-groups]
dev = [
  "bandit",
  "boto3-stubs[sqs]",
  "moto[sqs]",
  "mypy",
  "pyformance",
  "pytest",
  "pytest-cov",
  "ruff",
  "typing-extensions"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.extend-select = ["I"]
