[project]
name = "aws-sqs-batchlib"
version = "3.0.0"
description = "Library for working with Amazon SQS"
authors = [
    { name = "Sami Jaktholm", email = "sjakthol@outlook.com" }
]
license = "MIT"
readme = 'README.md'
requires-python = ">=3.9"
dependencies = [
  "boto3<2"
]


[dependency-groups]
dev = [
  "bandit>=1.8.3,<2",
  "boto3-stubs[sqs]<2",
  "moto[sqs]>=5.1.4,<6",
  "mypy>=1.15.0,<2",
  "pyformance>=0.4,<1",
  "pytest>=8.3.5,<9",
  "pytest-cov>=6.1.1,<7",
  "ruff>=0.11.8,<1",
  "typing-extensions>=4.13.2,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.extend-select = ["I"]
