[project]
name = "aws-sqs-batchlib"
version = "3.1.0"
description = "Library for working with Amazon SQS"
authors = [
    { name = "Sami Jaktholm", email = "sjakthol@outlook.com" }
]
license = "MIT"
readme = 'README.md'
requires-python = ">=3.10"
dependencies = [
  "boto3<2"
]


[dependency-groups]
dev = [
  "bandit",
  "boto3-stubs[sqs]",
  "moto[sqs]",
  "mypy",
  "pyformance",
  "pytest",
  "pytest-cov",
  "ruff",
  "typing-extensions"
]

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "aws_sqs_batchlib"
module-root = ""

[tool.ruff]
lint.extend-select = ["I"]
